# rust-wasm

./: .gitignore  Cargo.toml  build.sh  gotg_client.js  gotg_client_bg.wasm  graemarch.js  graemarch_bg.wasm  index.html  index.js  run.sh  serve.sh
.github/workflows/: actions.yml  build_site.yml
client/: Cargo.toml  build.sh
gotg-client/: Cargo.toml
gotg-client/site/: index.js
gotg-client/src/: lib.rs
gotg-client/src/graphics/: canvas.rs
gotg-lib/: Cargo.toml  build.sh  increment_build_number.sh
gotg-lib/src/: build_number.rs  lib.rs  version.rs
gotg-server/: Cargo.toml
gotg-server/src/: main.rs
pkg/: README.md  graemarch.js  graemarch_bg.wasm  package.json
server/: Cargo.toml
site/: index.html  index.js
src/: lib.rs
src/graphics/: canvas.rs
